--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,7 +2,12 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 10px;
+    position: sticky;
+    top: 0;
+    height:70px ;
+    z-index: 100;
+    background-color: white;
+
 }
 
 .header__logo{
@@ -10,24 +15,23 @@
     align-items: center;
     margin-left: 25px;
     cursor: pointer;
-
+    object-fit: contain;
+    
 
 }
 
 
 .header__middle {
     display: flex;
-    align-items: center;
-    width: 40%;
-    border : 1px solid lightgray ;
-   
+align-items: center;
 
 } 
-
-.header__right {
+.Headerright {
     display: flex;
     align-items: center;
 }
+
+
 
 .header__left {
     display: flex;
@@ -37,24 +41,26 @@
 
 .header__middle > input {
     flex: 1;
-    border : none;
-    height: 30px;
-
-}
-.searchicon__button {
-    width: 20%!important;
     border: 1px solid lightgray;
-    color: rgb(197, 191, 191);
-
-
+    height: 27px;
+    width: 500px;
 }
+.SearchIcon {
+    width: 70px!important;
+    color: rgb(197, 191, 191);
+    border: 1px solid lightgray;
+}
+
 .mic__button{
    margin-left: -350px;
    width: 20px;
    cursor: pointer;
     
 }
-.header__right{
-    margin-right: 25px;
-    
+
+.header__icon {
+    margin-right: 20px;
+}
+.MenuIcon{
+    margin-left: 20px;
 }
