--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,4 +1,52 @@
-.SidebarToggler {
+/* .Sidebar {
+    
+    position: fixed;
+    width: 280px;
+    max-width:70%;
+    height: 100%;
+    left:0;
+    top: 0;
+     z-index: 200; 
+    background-color: white;
+    padding: 32px 16px;
+    box-sizing: border-box;
+    transition: transform 0.3s ease-out;
+    transform: translateX(-100%); 
+}
+/* .Sidebar {
+    
+    position: fixed;
+    width: 280px;
+    max-width:70%;
+    height: 100%;
+    left:0;
+    top: 0;
+     z-index: 200; 
+    background-color: white;
+    padding: 32px 16px;
+    box-sizing: border-box;
+    transition: transform 0.3s ease-out;
+    transform: translateX(-100%); 
+}
+
+
+ 
+
+@media (min-width: 500px) {
+    .Sidebar {
+        display: none;
+    }
+} 
+
+
+.Open{
+ transform: translateX(0);
+}
+.Close{
+transform: translateX(-100%)
+} */
+/*
+.Sidebar {
     width: 40px;
     height: 100%;
     display: flex;
@@ -10,14 +58,57 @@
     cursor: pointer;
 }
 
-.SidebarToggler div {
+.Sidebar > div {
     width: 90%;
     height: 3px;
     background-color: white;
-}
+}*/
 
-@media (min-width: 500px) {
-    .SidebarToggle {
+/* @media (min-width: 500px) {
+    .Sidebar {
         display: none;
     }
+} */
+.Sidebar {
+    
+    position: fixed;
+    width: 280px;
+    max-width:70%;
+    height: 100%;
+    left:0;
+    top: 0;
+     z-index: 200; 
+    background-color: white;
+    padding: 32px 16px;
+    box-sizing: border-box;
+}
+ .SidebarOpen {
+    
+    position: fixed;
+    width: 280px;
+    max-width:70%;
+    height: 100%;
+    left:0;
+    top: 0;
+     z-index: 500; 
+    background-color: white;
+    padding: 32px 16px;
+    box-sizing: border-box;
+    transition: transform 0.5s ease-out;
+    transform: translateX(0); 
+}
+.SidebarClose {
+    
+    position: fixed;
+    width: 280px;
+    max-width:70%;
+    height: 100%;
+    left:0;
+    top: 0;
+     z-index: 200; 
+    background-color: white;
+    padding: 32px 16px;
+    box-sizing: border-box;
+    transition: transform 0.3s ease-out;
+    transform: translateX(-100%); 
 }
